@@ -91,6 +91,28 @@ __asm__( \
 	"addl $4,%esp\n\t" \
 	"iret\n\t")
 
+#define lxrt_switch_to(prev, next, last) do {				\
+	__asm__ __volatile__(						\
+		 "pushfl \n\t"					        \
+		 "pushl %%esi\n\t"				        \
+		 "pushl %%edi\n\t"					\
+		 "pushl %%ebp\n\t"					\
+		 "movl %%esp,%0\n\t"	/* save ESP */		\
+		 "movl %3,%%esp\n\t"	/* restore ESP */		\
+		 "movl $1f,%1\n\t"	/* save EIP */		\
+		 "pushl %4\n\t"		/* restore EIP */		\
+		 "jmp "SYMBOL_NAME_STR(__switch_to)"\n\t"		\
+		 "1:\t"							\
+		 "popl %%ebp\n\t"					\
+		 "popl %%edi\n\t"					\
+		 "popl %%esi\n\t"					\
+		 "popfl \n\t"						\
+		 :"=m" (prev->thread.esp),"=m" (prev->thread.eip),	\
+		  "=b" (last)						\
+		 :"m" (next->thread.esp),"m" (next->thread.eip),	\
+		  "a" (prev), "d" (next), "b" (prev));			\
+    } while(0)
+
 #endif /* __KERNEL__ */
 
 static union rtai_lxrt_t _rtai_lxrt(int srq, void *arg)
